Lua: fix spelling of Lua #2
According to Lua's about page (https://www.lua.org/about.html),
section "What's in a name?", Lua should be spelled "Lua".
Commit 5810b5e has fixed the documentation, this commit fixes
occurrences in other places.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -88,7 +88,7 @@ config RAW
 	  into the destination.
 
 config LUASCRIPTHANDLER
-	bool "luascript"
+	bool "Lua Script"
 	depends on LUA
 	default n
 	help
@@ -104,7 +104,7 @@ config SHELLSCRIPTHANDLER
 	  is called.
 
 config HANDLER_IN_LUA
-	bool "Handlers in LUA"
+	bool "Handlers in Lua"
 	depends on LUASCRIPTHANDLER
 	default n
 	help
