fix a lot of minor typos
Fix around 45 typos, misspellings and common grammatical errors.

These typos have minimal impact on the code as these are mostly in the
doc files or in comments inside the code files.

Signed-off-by: Abdur Rehman <abdur_rehman@mentor.com>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -117,7 +117,7 @@ ifneq ($(CONFIG_DOWNLOAD),)
 LDLIBS += curl
 endif
 
-# libconfig is alwasy compiled
+# libconfig is always compiled
 ifeq ($(CONFIG_LIBCONFIG),y)
 LDLIBS += config
 endif
