--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -98,9 +98,9 @@ identify : (
 #			  number of retries to connect to server
 # retrywait		: integer
 # sslkey		: string
-#			  path the the file containing the key for ssl connection
+#			  path of the file containing the key for ssl connection
 # sslcert		: string
-#			  path the the file containing the certificate for SSL connection
+#			  path of the file containing the certificate for SSL connection
 # proxy			: string
 #			  in case the server is reached via a proxy
 
