--- a/Kconfig
+++ b/Kconfig
@@ -279,8 +279,8 @@ config DOWNLOAD
 	default n
 	depends on HAVE_LIBCURL
 	help
-	  Enable update from image URL using libcurl. Files are downloaded
-	  completely before installation begins.
+	  Enable update from image URL using libcurl. The stream is sent via IPC
+	  to the installer as it is done for other interfaces.
 
 comment "Image downloading support needs libcurl"
 	depends on !HAVE_LIBCURL
