handler: swupdate forwarder
Add a handler to forward SWU images. A global SWU can contain
other SWU that are forwarded to other devices (or subsystems)
running SWUpdate as well.

The handler transfers an embedded SWU to all destinations assigned
into sw-description at the same time (streaming works with the handler).

The destinations are defined in properties for the entry:

{
	filename = "image.swu";
	type = "swuforward";

	properties: ({
		name = "url";
		value = "http://<dest ip>:8080";
		}
	);
}

The handler assumes that the destinations are running SWUpdate
with activated Webserver and uses the REST-API to send the image.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -161,6 +161,21 @@ config REMOTE_HANDLER
 comment "remote handler needs zeromq"
 	depends on !HAVE_LIBZEROMQ
 
+config SWUFORWARDER_HANDLER
+	bool "SWU forwarder"
+	depends on HAVE_LIBCURL
+	select CURL
+	select JSON
+	default n
+	help
+	  This allows to build a chain of updater. A
+	  SWU can contains other SWUs for other systems.
+	  The handler takes a list of URLs and forward the
+	  embedded SWU to the other devices using the
+	  Webserver REST API.
+
+comment "SWU forwarder requires libcurl"
+	depends on !HAVE_LIBCURL
 
 config BOOTLOADERHANDLER
 	bool "bootloader"
