Kconfig: adding a CURL switch
A CONFIG_CURL is introduced to move curl code into a
separate library.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -72,6 +72,7 @@ config SURICATTA_HAWKBIT
 	depends on HAVE_LIBCURL
 	depends on HAVE_JSON_C
 	select JSON
+	select CURL
 	help
 	  Support for hawkBit server.
 	  https://projects.eclipse.org/projects/iot.hawkbit
