--- a/Kconfig
+++ b/Kconfig
@@ -61,6 +61,10 @@ menu "Swupdate Settings"
 
 menu "General Configuration"
 
+config CURL
+	bool
+	default n
+
 config SYSTEMD
 	bool "enable systemd support"
 	default n
@@ -278,6 +282,7 @@ config DOWNLOAD
 	bool "Enable image downloading"
 	default n
 	depends on HAVE_LIBCURL
+	select CURL
 	help
 	  Enable update from image URL using libcurl. The stream is sent via IPC
 	  to the installer as it is done for other interfaces.
