gitignore: drop tools results from git
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,12 @@ scripts/kconfig/zconf.tab.c
 # 
 swupdate
 swupdate_unstripped*
-examples/client/client
-examples/sendtohawkbit/sendtohawkbit
-examples/sendtohawkbit/hawkbitcfg
+tools/*_unstripped
+tools/client
+tools/sendtohawkbit
+tools/hawkbitcfg
+tools/*.map
+tools/*.out
 
 #
 # Generated files
