downloader: add option to send Basic Auth info
This option is needed if an update is protected by username / password to avoid
that anybody can download this update file.

This method is used by Cumulocity infrastructure for example to deploy updates.

Signed-off-by: Charles-Antoine Couret <charles-antoine.couret@essensium.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -48,8 +48,12 @@ globals :
 #			  it is the number of seconds that can be accepted without
 #			  receiving any packets. If it elapses, the connection is
 #			  considered broken.
+# authentication	: string
+#			  credentials needed to get software if server
+#			  enables Basic Auth to allow this downloading
 download :
 {
+	authentication = "user:password";
 	retries = 3;
 	timeout = 1800;
 	url = "http://example.com/software.swu";
