bootloader: EFI Boot Guard support
Add support for EFI Boot Guard to SWUpdate.
See: https://github.com/siemens/efibootguard

Signed-off-by: Christian Storm <christian.storm@siemens.com>
Signed-off-by: Andreas Reichel <andreas.reichel.ext@siemens.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -179,6 +179,10 @@ ifeq ($(CONFIG_SYSTEMD),y)
 LDLIBS += systemd
 endif
 
+ifeq ($(CONFIG_BOOTLOADER_EBG),y)
+LDLIBS += ebgenv z
+endif
+
 # suricatta
 ifneq ($(CONFIG_SURICATTA),)
 ifneq ($(CONFIG_SURICATTA_SSL),)
