License: move to SPDX header
To simplify Licensing, replace all headers with
SPDX identifiers.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -1,3 +1,7 @@
+# Copyright (C) 2014-2018 Stefano Babic <sbabic@denx.de>
+#
+# SPDX-License-Identifier:     GPL-2.0-or-later
+#
 lib-$(CONFIG_UBOOT)		+= uboot.o
 lib-$(CONFIG_BOOTLOADER_NONE)	+= none.o
 lib-$(CONFIG_BOOTLOADER_GRUB)	+= grub.o
