--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,1 +1,4 @@
+# Copyright (C) 2014-2018 Stefano Babic <sbabic@denx.de>
+#
+# SPDX-License-Identifier:     GPL-2.0-or-later
 lib-y				+= parser.o parse_external.o
