--- a/tools/Makefile
+++ b/tools/Makefile
@@ -6,7 +6,7 @@
 #
 # Copyright (C) 1999-2005 by Erik Andersen <andersen@codepoet.org>
 #
-# Licensed under GPLv2, see file LICENSE in this source tree.
+# SPDX-License-Identifier:     GPL-2.0-or-later
 
 lib-y += \
 	 client.o \
