Fix build if DOWNLOAD is set, but no JSON
The downloader does not require JSON, but channel_curl is built
even if not called. Build fails with the error:

corelib/channel_curl.c:27:10: fatal error: json-c/json.h: No such file or directory

Add a CONFIG_CHANNEL_CURL that is automatically set by the modules
reuiring it (suricatta and swuforwarder).

Signed-off-by: Stefano Babic <sbabic@denx.de>
Reported-by: Jörg Krause <joerg.krause@embedded.rocks>
Acked-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Kconfig
+++ b/Kconfig
@@ -294,6 +294,13 @@ config DOWNLOAD
 comment "Image downloading support needs libcurl"
 	depends on !HAVE_LIBCURL
 
+config CHANNEL_CURL
+	bool
+	depends on HAVE_LIBCURL
+	depends on HAVE_JSON_C
+	select CURL
+	select JSON
+
 config HASH_VERIFY
 	bool "Allow to add sha256 hash to each image"
 	depends on HAVE_LIBSSL
