mongoose: Update mongoose web server to version 6.11
Update the mongoose web server to version 6.11 [1]
with the following fixes:
- Add SPDX header
- Add missing void parameter type to function declarations
- Use internal linkage for local functions
- Remove second declaration of a variable inside sub block

[1] 92604e1b7c65009a6214fea9f1b2460df721d38e

Signed-off-by: Stefan Herbrechtsmeier <stefan.herbrechtsmeier@weidmueller.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -143,18 +143,11 @@ LDLIBS += crypto ssl
 endif
 
 # mongoose / webserver
-ifneq ($(CONFIG_WEBSERVER),)
-ifneq ($(CONFIG_MONGOOSESSL),)
-KBUILD_CFLAGS += -DNO_SSL_DL
+ifeq ($(CONFIG_WEBSERVER),y)
+ifeq ($(CONFIG_MONGOOSE),y)
+ifeq ($(CONFIG_MONGOOSESSL),y)
 LDLIBS += crypto ssl
-else
-KBUILD_CFLAGS += -DNO_SSL
 endif
-ifneq ($(CONFIG_MONGOOSELUA),)
-KBUILD_CFLAGS += -DUSE_LUA
-endif
-ifneq ($(CONFIG_MONGOOSEIPV6),)
-KBUILD_CFLAGS += -DUSE_IPV6
 endif
 endif
 
