mongoose: Add WebSocket support
Add WebSocket support for the asynchronous communication with a
web application to allow visualization of software updates.

Signed-off-by: Stefan Herbrechtsmeier <stefan.herbrechtsmeier@weidmueller.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/mongoose/Config.in
+++ b/mongoose/Config.in
@@ -18,6 +18,24 @@ config MONGOOSE
 
 endchoice
 
+choice
+	prompt "Web Application Interface"
+	default MONGOOSE_WEB_API_V1
+	help
+	  Choose the bootloader
+
+config MONGOOSE_WEB_API_V1
+	bool "Version 1 (deprecated)"
+	help
+	  Support for version 1
+
+config MONGOOSE_WEB_API_V2
+	bool "Version 2"
+	help
+	  Support for version 2
+
+endchoice
+
 config MONGOOSEIPV6
 	bool "IPv6 support"
 	default y
