--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -105,6 +105,8 @@ identify : (
 #			  path of the file containing the key for ssl connection
 # sslcert		: string
 #			  path of the file containing the certificate for SSL connection
+# token			: string
+#			  Hawkbit security token
 # proxy			: string
 #			  in case the server is reached via a proxy
 
@@ -126,6 +128,7 @@ suricatta :
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
 	sslcert		= "/etc/ssl/sslcert";
+	token           = "3bc13b476cb3962a0c63a5c92beacfh7";
 */
 };
 
