--- a/configs/debian_defconfig
+++ b/configs/debian_defconfig
@@ -17,4 +17,5 @@ CONFIG_SHELLSCRIPTHANDLER=y
 CONFIG_HANDLER_IN_LUA=y
 CONFIG_ARCHIVE=y
 CONFIG_REMOTE_HANDLER=y
+CONFIG_SWUFORWARDER_HANDLER=y
 CONFIG_BOOTLOADERHANDLER=y
