--- a/Makefile.flags
+++ b/Makefile.flags
@@ -106,7 +106,8 @@ ifeq ($(CONFIG_HANDLER_IN_LUA),y)
 ifeq ($(CONFIG_EMBEDDED_LUA_HANDLER),y)
 ifneq ($(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE),)	
 LDFLAGS_swupdate += -Wl,--format=binary -Wl,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE) -Wl,--format=default
-KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))))_start"
+KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_START="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))))_start"
+KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_END="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))))_end"
 endif
 endif
 endif
