downloader: make use of channel_curl
Instead of the downloader having an own cURL binding
implementation, make use of the generic channel_curl.

Signed-off-by: Christian Storm <christian.storm@siemens.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -286,7 +286,7 @@ config DOWNLOAD
 	bool "Enable image downloading"
 	default n
 	depends on HAVE_LIBCURL
-	select CURL
+	select CHANNEL_CURL
 	help
 	  Enable update from image URL using libcurl. The stream is sent via IPC
 	  to the installer as it is done for other interfaces.
