channel_curl: remove hard dependency on JSON
Currently, channel_curl relies on CONFIG_JSON. However, this
is mostly only required for preparing channel_get()'s return
value as proper json_object to be consumed further.
If used for, e.g., the dowloader, such preparation is not
necessary. Hence, enclose JSON-specifics in #ifdef's.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -165,6 +165,7 @@ config SWUFORWARDER_HANDLER
 	depends on HAVE_LIBCURL
 	depends on HAVE_JSON_C
 	select CHANNEL_CURL
+	select JSON
 	default n
 	help
 	  This allows to build a chain of updater. A
