example: extend webserver section in configuration
This is done to resync with code afte Webserver update

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -132,6 +132,30 @@ suricatta :
 #
 # webserver : setup for the embedded webserver
 # see ./swupdate -h for details
+#
+# document_root		: string
+#			  directory to the website
+# userid		: integer
+#			  userID for Webserver process
+# groupid		: integer
+#			  groupId for Webserver process
+# listening_ports	: integer
+#			  Webserver listening ports
+# enable_directory_listing : boolean
+#			  true to list directories
+# ssl_certificate	: string
+#			  path to SSL certificat
+# ssl_certificate_key	: string
+#			  path to SSL private key
+# api			: integer
+#			  1 = simple REST API for M2M communication
+#			  2 = WebApp with Websockets support
+# global-auth-file	: string
+#			  path to the global authorization file, if any
+#			  default = none
+# auth-domain		: string
+#			  path to auth-domain, if any
+#			  default = none
 
 webserver :
 {
