gitignore: add tools/progress
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ swupdate
 swupdate_unstripped*
 tools/*_unstripped
 tools/client
+tools/progress
 tools/sendtohawkbit
 tools/hawkbitcfg
 tools/*.map
