--- a/Kconfig
+++ b/Kconfig
@@ -159,6 +159,14 @@ config SOCKET_REMOTE_HANDLER_DIRECTORY
 	  Directory where sockets to remote handler processes
 	  are expected to be found.
 
+config SOCKET_NOTIFIER_DIRECTORY
+	string "SWUpdate notifier socket directory"
+	depends on HAVE_FREEBSD
+	default "/tmp/"
+	help
+	  Path to SWUpdate's Notifier sockets on FreeBSD as
+	  Linux-like abstract sockets are not available.
+
 endmenu
 
 config MTD
