Add Authorization header to curl requests
LCKBX-19

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -7,7 +7,7 @@
 
 # globals : general configuration for the installer
 #
-# verbose 
+# verbose
 #   Default Value: false
 #
 # loglevel 		: integer
@@ -16,7 +16,7 @@
 #	 		  enable sending logs to syslog daemon
 # public-key-file	: string
 #			  file with public key for
-#			  image verification 
+#			  image verification
 # mtd-blacklist		: list integers
 #			  MTD devices where SWUpdate
 #			  must not try to check for UBI filesystem.
@@ -85,7 +85,7 @@ identify : (
 	{ name = "swCompatibility"; value = "unknown";}
 );
 
-# 
+#
 # suricatta section: setup for backend
 #
 # Currently, they refer to the Hawkbit agent.
@@ -105,6 +105,8 @@ identify : (
 #			  path of the file containing the key for ssl connection
 # sslcert		: string
 #			  path of the file containing the certificate for SSL connection
+# token			: string
+#			  Hawkbit security token
 # proxy			: string
 #			  in case the server is reached via a proxy
 
@@ -126,6 +128,7 @@ suricatta :
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
 	sslcert		= "/etc/ssl/sslcert";
+	token       = "3bc13b476cb3962a0c63a5c92beacfh7";
 */
 };
 
