handlers: add a dummy handler
This handler skip an installation and it is thought
to provide a dry-to-run.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -7,6 +7,7 @@
 # not drop the handler if it is not called.
 # Handler can be called dynamically based
 # on the received image type.
+obj-y	+= dummy_handler.o
 obj-$(CONFIG_ARCHIVE) += archive_handler.o
 obj-$(CONFIG_CFI)	+= flash_handler.o
 obj-$(CONFIG_CFIHAMMING1)+= flash_hamming1_handler.o
