hawkbit: allow to set a ciphers suite
As default, curl accepts all implemented ciphers. It is possible
to use a restricted list of ciphers to drop ciphers that are not
considered safe enough. This adds an entry in the configuration file
to set a string with a list of ciphers as they are accepted by
in CURLOPT_SSL_CIPHER_LIST option.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -109,6 +109,9 @@ identify : (
 #			  Hawkbit security token
 # proxy			: string
 #			  in case the server is reached via a proxy
+# ciphers		: string in the format used by CURL to set the allowed ciphers suite
+#			  This allows to disable some ciphers, for example
+#			  ciphers = "!eNULL:!aNULL:!EXP:!LOW:!MEDIUM:!ADH:!AECDH:!IDEA:!SEED:!MD5:!SHA:!RC4:HIGH+EECDH:HIGH+EDH";
 
 suricatta :
 {
