handlers: handler to update microcontroller via UART
The handler implements a simple protocol to upgrade a microcontroller
via a UART connection. The microcontroller listens to a pin during
reset to check if it should remain in bootloader and waits for
a an upgrade. The handler gets information about the GPIOs for
reset and programming from the sw-description file.

The protocol is described in the header of the source file.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -33,6 +33,10 @@ config HAVE_LIBCURL
 	bool
 	option env="HAVE_LIBCURL"
 
+config HAVE_LIBGPIOD
+	bool
+	option env="HAVE_LIBGPIOD"
+
 config HAVE_LIBMTD
 	bool
 	option env="HAVE_LIBMTD"
