--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -18,3 +18,4 @@ obj-$(CONFIG_REMOTE_HANDLER) += remote_handler.o
 obj-$(CONFIG_SHELLSCRIPTHANDLER) += shell_scripthandler.o
 obj-$(CONFIG_SWUFORWARDER_HANDLER) += swuforward_handler.o
 obj-$(CONFIG_UBIVOL)	+= ubivol_handler.o
+obj-$(CONFIG_UCFWHANDLER)	+= ucfw_handler.o
