--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ scripts/kconfig/zconf.tab.c
 # 
 swupdate
 swupdate_unstripped*
+lua_swupdate.so*
 tools/*_unstripped
 tools/client
 tools/progress
