bootloader: change "none" in RAM mode
Instead of doing nothing, the "none" bootloader
maintains a list of environment in RAM.

This allows full test when a variable is set and then
read back from code.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/bootloader/Config.in
+++ b/bootloader/Config.in
@@ -27,9 +27,11 @@ comment "U-Boot support needs libubootenv, libz"
 	depends on !HAVE_LIBUBOOTENV || !HAVE_ZLIB
 
 config BOOTLOADER_NONE
-	bool "None"
+	bool "Environment in RAM"
 	help
-	  No interface to a bootloader
+	  This simulates the interface to a bootloader.
+	  Bootloader environment is just maitained in RAM
+	  and lost when SWUpdate exits.
 
 config BOOTLOADER_GRUB
 	bool "GRUB"
