examples: add description in swupdate.cfg
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -101,6 +101,7 @@ identify : (
 # retry			: integer
 #			  number of retries to connect to server
 # retrywait		: integer
+# cafile		: Certificate Authority certificate
 # sslkey		: string
 #			  path of the file containing the key for ssl connection
 # sslcert		: string
