suricatta: general service (HTTP connector)
This implements a very simple and easy connector to
a backend using HTTP return codes to promote an upgrade.
The standard HTTP codes returned by the server are interpreted
by SWUpdate to check if an update is available.
A generic query to the server is provided to inform the backend
about versions and identification number of the running client
(serial number, MAC address, version running, etc.).

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/suricatta/Makefile
+++ b/suricatta/Makefile
@@ -5,3 +5,4 @@ lib-$(CONFIG_SURICATTA) += suricatta.o common.o
 ifneq ($(CONFIG_SURICATTA_HAWKBIT),)
 lib-$(CONFIG_SURICATTA) += server_hawkbit.o
 endif
+lib-$(CONFIG_SURICATTA_GENERAL) += server_general.o
