--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -80,6 +80,18 @@ config SURICATTA_HAWKBIT
 comment "hawkBit support needs libcurl, json-c"
 	depends on !HAVE_LIBCURL || !HAVE_JSON_C
 
+config SURICATTA_GENERAL
+	bool "General HTTP support"
+	depends on HAVE_LIBCURL
+	select CHANNEL_CURL
+	help
+	  Support for Simple HTTP coded server
+	  The server uses HTTP return codes to detect if an update
+	  is available. See documentation for more details.
+
+comment "General HTTP backend support needs libcurl"
+	depends on !HAVE_LIBCURL
+
 endchoice
 
 endmenu
