debian: fix issues reported by lintian
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: swupdate
-Section: universe/embedded
+Section: embedded
 Priority: optional
 Maintainer: Stefano Babic <sbabic@denx.de>
 Build-Depends: debhelper (>=9), libconfig9
@@ -11,7 +11,7 @@ Homepage: http://sbabic.github.io/swupdate
 Package: swupdate
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: SWUpdate provides a reliable way to update an embedded system
+Description: reliable way to update an embedded system
  This project is thought to help to update an embedded system from a storage media or from network.
  However, it should be mainly considered as a framework, where further protocols or installers
  (in SWUpdate they are called handlers) can be easily added to the application.
