hawkbit: allow passing target token as command line parameter
Allow passing target token as a command line parameter with the '-k' or
'--targettoken' options. Additionaly rename 'token' option to 'targettoken' to
allow implementation of gateway token support.

Signed-off-by: Marta Todeschini <marta.todeschini@kynetics.com>
Signed-off-by: Diego Rondini <diego.rondini@kynetics.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -105,8 +105,8 @@ identify : (
 #			  path of the file containing the key for ssl connection
 # sslcert		: string
 #			  path of the file containing the certificate for SSL connection
-# token			: string
-#			  Hawkbit security token
+# targettoken	: string
+#			  hawkBit target security token
 # proxy			: string
 #			  in case the server is reached via a proxy
 # ciphers		: string in the format used by CURL to set the allowed ciphers suite
@@ -131,7 +131,7 @@ suricatta :
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
 	sslcert		= "/etc/ssl/sslcert";
-	token           = "3bc13b476cb3962a0c63a5c92beacfh7";
+	targettoken 	= "3bc13b476cb3962a0c63a5c92beacfh7";
 */
 };
 
