hawkBit: add authentication with gateway token
Add support to authenticate to hawkBit using a gateway security token.
Gateway security token is a single token shared between all the devices of a
given tenant. It is useful during development as a simple authentication
method. For more informations see:
https://www.eclipse.org/hawkbit/concepts/authentication/
The gateway token can be passed as a command line parameter with the '-g' or
'--gatewaytoken' options or with the 'gatewaytoken' parameter in the
configuration file.

Signed-off-by: Diego Rondini <diego.rondini@kynetics.com>
Signed-off-by: Marta Todeschini <marta.todeschini@kynetics.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -107,6 +107,8 @@ identify : (
 #			  path of the file containing the certificate for SSL connection
 # targettoken	: string
 #			  hawkBit target security token
+# gatewaytoken	: string
+#			  hawkBit gateway security token
 # proxy			: string
 #			  in case the server is reached via a proxy
 # ciphers		: string in the format used by CURL to set the allowed ciphers suite
@@ -132,6 +134,7 @@ suricatta :
 	sslkey		= "/etc/ssl/sslkey";
 	sslcert		= "/etc/ssl/sslcert";
 	targettoken 	= "3bc13b476cb3962a0c63a5c92beacfh7";
+	gatewaytoken 	= "99616d4fae39167deddf21cd90047861";
 */
 };
 
