--- a/bindings/Makefile
+++ b/bindings/Makefile
@@ -1,6 +1,6 @@
 # Copyright (C) 2014-2018 Stefano Babic <sbabic@denx.de>
 #
 # SPDX-License-Identifier:     GPL-2.0-or-later
-obj-$(CONFIG_LUA)	+= auxiliar.o lua_swupdate.o ../corelib/lua_compat.o
+obj-$(CONFIG_LUA)	+= auxiliar.o lua_swupdate.o lua_compat_shared.o
 
 EXTRA_CFLAGS += -fPIC
