Ignore format truncation warning
Truncation is actively used in SWUpdate to reduce the number of chars
put into a buffer. Ignore the warning raised since gcc 7.x

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -21,6 +21,7 @@ KBUILD_CFLAGS += $(call cc-option,-Wunused -Wunused-parameter,)
 KBUILD_CFLAGS += $(call cc-option,-Wunused-function -Wunused-value,)
 KBUILD_CFLAGS += $(call cc-option,-Wmissing-prototypes -Wmissing-declarations,)
 KBUILD_CFLAGS += $(call cc-option,-Wno-format-security,)
+KBUILD_CFLAGS += $(call cc-option,-Wno-format-truncation,)
 # If you want to add more -Wsomething above, make sure that it is
 # still possible to build bbox without warnings.
 
