Ignore format truncation warning if !clang
Commit a50a956 introduced the -Wno-format-truncation compiler
flag which, however, is unknown to clang (tested version 7.0.0).
Make it effective if not clang is used as compiler.

Signed-off-by: Christian Storm <christian.storm@siemens.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -21,7 +21,9 @@ KBUILD_CFLAGS += $(call cc-option,-Wunused -Wunused-parameter,)
 KBUILD_CFLAGS += $(call cc-option,-Wunused-function -Wunused-value,)
 KBUILD_CFLAGS += $(call cc-option,-Wmissing-prototypes -Wmissing-declarations,)
 KBUILD_CFLAGS += $(call cc-option,-Wno-format-security,)
+ifneq ($(CC),clang)
 KBUILD_CFLAGS += $(call cc-option,-Wno-format-truncation,)
+endif
 # If you want to add more -Wsomething above, make sure that it is
 # still possible to build bbox without warnings.
 
