travis: silence lua.pc not found warnings
Brute-force silence the lua.pc not found warnings
to unclutter the CI build output.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_install:
     - sudo apt-get install -y check
 
 script:
+    - sudo ln -sf /usr/lib/x86_64-linux-gnu/pkgconfig/lua5.2.pc /usr/lib/x86_64-linux-gnu/pkgconfig/lua.pc
     - sudo mkdir -p /usr/local/lib
     - sudo mkdir -p /usr/local/include
     - sudo mkdir -p /usr/local/include/mtd
