debian: fixing lintian errors
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,7 @@ export DH_VERBOSE = 1
 
 # see FEATURE AREAS in dpkg-buildflags(1)
 #export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+export DEB_BUILD_MAINT_OPTIONS = hardening=+bindnow
 
 # see ENVIRONMENT in dpkg-buildflags(1)
 # package maintainers to append CFLAGS
@@ -24,6 +25,7 @@ build: documentation configure
 	dh $@
 
 %:
+	echo $@
 	dh $@
 
 
